--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ install:
   - pip install -r requirements.txt
 script:
   - python3 testing.py
+  - - coverage run testing.py
+    after_success:
+      - coveralls
