Add zip to city conversion helper function.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ install:
   - pip install -r requirements.txt
 script:
   - python3 testing.py
-  - coverage run testing.py
+  - coverage run testing/testing.py
 after_success:
   - coveralls
