--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  - python3 testing.py
+  - python3 testing/testing.py
   - coverage run testing/testing.py
 after_success:
   - coveralls
